--- a/Source/Flow.Core/Flow.Core.csproj
+++ b/Source/Flow.Core/Flow.Core.csproj
@@ -11,7 +11,7 @@
     <Title>Flow</Title>
     <Version>1.0.0</Version>
     <Authors>Paul Kent</Authors>
-    <Description>The Flow&lt;T&gt; class is a lightweight monadic result type that encapsulates the outcome of an operation, returning either a success or failure value. Designed for seamless integration, Flow&lt;T&gt; and its associated failure classes are attributed for both gRPC code-first and System.Text.Json serialization.</Description>
+    <Description>Flow is a lightweight monadic result type that encapsulates the outcome of an operation, returning either a success or failure value. Designed for seamless integration, Flow and its associated failure classes are attributed for both gRPC code-first and System.Text.Json serialization.</Description>
     <Copyright>Copyright (c) 2024 Paul Kent.</Copyright>
     <PackageProjectUrl>https://github.com/code-dispenser/Flow</PackageProjectUrl>
     <PackageIcon>icon-64.png</PackageIcon>
