Amended project file to ensure all green ticks for nuget package, source link, deterministic build etc and add a couple more xml comments.

--- a/Source/Flow.Core/Flow.Core.csproj
+++ b/Source/Flow.Core/Flow.Core.csproj
@@ -1,24 +1,35 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <SignAssembly>True</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\..\Assets\FlowKey.snk</AssemblyOriginatorKeyFile>
-    <PackageReadmeFile>ReadMe.md</PackageReadmeFile>
-    <PackageLicenseFile>License.txt</PackageLicenseFile>
-    <Title>Flow</Title>
-    <Version>1.0.0</Version>
-    <Authors>Paul Kent</Authors>
-    <Description>Flow is a lightweight monadic result type that encapsulates the outcome of an operation, returning either a success or failure value. Designed for seamless integration, Flow and its associated failure classes are attributed for both gRPC code-first and System.Text.Json serialization.</Description>
-    <Copyright>Copyright (c) 2024 Paul Kent.</Copyright>
-    <PackageProjectUrl>https://github.com/code-dispenser/Flow</PackageProjectUrl>
-    <PackageIcon>icon-64.png</PackageIcon>
-    <RepositoryUrl>https://github.com/code-dispenser/Flow</RepositoryUrl>
+	<TargetFramework>net8.0</TargetFramework>
+	<ImplicitUsings>enable</ImplicitUsings>
+	<Nullable>enable</Nullable>
+	<SignAssembly>True</SignAssembly>
+	<AssemblyOriginatorKeyFile>..\..\Assets\FlowKey.snk</AssemblyOriginatorKeyFile>
+	<PackageLicenseFile>License.txt</PackageLicenseFile>
+	<Title>Flow</Title>
+	<Version>1.0.0</Version>
+	<Authors>Paul Kent</Authors>
+	<Description>Flow is a lightweight monadic result type that encapsulates the outcome of an operation, returning either a success or failure value. Designed for seamless integration, Flow and its associated failure classes are attributed for both gRPC code-first and System.Text.Json serialization.</Description>
     <PackageTags>operation result; result; monad; functional; method chaining</PackageTags>
-    <AssemblyVersion>1.0.0</AssemblyVersion>
-    <FileVersion>1.0.0</FileVersion>
+    <GenerateDocumentationFile>False</GenerateDocumentationFile>
+	<GeneratePackageOnBuild>False</GeneratePackageOnBuild>    
+	<PackageReadmeFile>ReadMe.md</PackageReadmeFile>	
+	<PackageIcon>icon-64.png</PackageIcon>	  
+	<FileVersion>1.0.0</FileVersion>
+	<Copyright>Copyright (c) 2024 Paul Kent.</Copyright>
+	<PackageVersion>1.0.0</PackageVersion>
+	<AssemblyVersion>1.0.0</AssemblyVersion>
+	<InformationalVersion>1.0.0</InformationalVersion>
+	<Version>1.0.0</Version>	  
+    <RepositoryUrl>https://github.com/code-dispenser/Flow</RepositoryUrl>	  
+	<PackageProjectUrl>https://github.com/code-dispenser/Flow</PackageProjectUrl>
+	<PublishRepositoryUrl>true</PublishRepositoryUrl>
+	<Deterministic>true</Deterministic>
+	<EmbedUntrackedSources>true</EmbedUntrackedSources>
+	<DebugType>embedded</DebugType>
+	<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+	  
   </PropertyGroup>
 
   <ItemGroup>
@@ -45,6 +56,9 @@
 	    <Pack>True</Pack>
 	    <PackagePath>\</PackagePath>
 	  </None>
-	  <None Include="..\..\ReadMe.md" Link="ReadMe.md" />
+	  <None Include="..\..\ReadMe.md" Link="ReadMe.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	</ItemGroup>
 </Project>
