--- a/Source/Flow.Core/Flow.Core.csproj
+++ b/Source/Flow.Core/Flow.Core.csproj
@@ -11,7 +11,7 @@
 	<Version>1.0.0</Version>
 	<Authors>Paul Kent</Authors>
 	<Description>Flow is a lightweight monadic result type that encapsulates the outcome of an operation, returning either a success or failure value. Designed for seamless integration, Flow and its associated failure classes are attributed for both gRPC code-first and System.Text.Json serialization.</Description>
-    <PackageTags>operation result; result; monad; functional; method chaining</PackageTags>
+    <PackageTags>operation result; monad; functional; method chaining; fluent</PackageTags>
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
 	<GeneratePackageOnBuild>False</GeneratePackageOnBuild>    
 	<PackageReadmeFile>ReadMe.md</PackageReadmeFile>	
