--- a/Source/Flow.Core/Flow.Core.csproj
+++ b/Source/Flow.Core/Flow.Core.csproj
@@ -8,20 +8,20 @@
 	<AssemblyOriginatorKeyFile>..\..\Assets\FlowKey.snk</AssemblyOriginatorKeyFile>
 	<PackageLicenseFile>License.txt</PackageLicenseFile>
 	<Title>Flow</Title>
-	<Version>1.0.0</Version>
+	<Version>1.0.1</Version>
 	<Authors>Paul Kent</Authors>
 	<Description>Flow is a lightweight monadic result type that encapsulates the outcome of an operation, returning either a success or failure value. Designed for seamless integration, Flow and its associated failure classes are attributed for both gRPC code-first and System.Text.Json serialization.</Description>
     <PackageTags>operation result; monad; functional; method chaining; fluent</PackageTags>
-    <GenerateDocumentationFile>False</GenerateDocumentationFile>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
 	<GeneratePackageOnBuild>False</GeneratePackageOnBuild>    
 	<PackageReadmeFile>ReadMe.md</PackageReadmeFile>	
 	<PackageIcon>icon-64.png</PackageIcon>	  
-	<FileVersion>1.0.0</FileVersion>
+	<FileVersion>1.0.1</FileVersion>
 	<Copyright>Copyright (c) 2024 Paul Kent.</Copyright>
-	<PackageVersion>1.0.0</PackageVersion>
-	<AssemblyVersion>1.0.0</AssemblyVersion>
-	<InformationalVersion>1.0.0</InformationalVersion>
-	<Version>1.0.0</Version>	  
+	<PackageVersion>1.0.1</PackageVersion>
+	<AssemblyVersion>1.0.1</AssemblyVersion>
+	<InformationalVersion>1.0.1</InformationalVersion>
+	<Version>1.0.1</Version>	  
     <RepositoryUrl>https://github.com/code-dispenser/Flow</RepositoryUrl>	  
 	<PackageProjectUrl>https://github.com/code-dispenser/Flow</PackageProjectUrl>
 	<PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -29,7 +29,16 @@
 	<EmbedUntrackedSources>true</EmbedUntrackedSources>
 	<DebugType>embedded</DebugType>
 	<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+	<PackageReleaseNotes>Now targets both .net 8 and .net 9</PackageReleaseNotes>
 	  
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net9.0|AnyCPU'">
+    <WarningLevel>8</WarningLevel>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net9.0|AnyCPU'">
+    <WarningLevel>8</WarningLevel>
   </PropertyGroup>
 
   <ItemGroup>
