--- a/Source/Flow.Core/Flow.Core.csproj
+++ b/Source/Flow.Core/Flow.Core.csproj
@@ -15,12 +15,12 @@
 	<GeneratePackageOnBuild>False</GeneratePackageOnBuild>    
 	<PackageReadmeFile>ReadMe.md</PackageReadmeFile>	
 	<PackageIcon>icon-64.png</PackageIcon>	  
-	<FileVersion>2.1.2</FileVersion>
+	<FileVersion>2.2.0</FileVersion>
 	<Copyright>Copyright (c) 2024 Paul Kent.</Copyright>
-	<PackageVersion>2.1.2</PackageVersion>
-	<AssemblyVersion>2.1.2</AssemblyVersion>
+	<PackageVersion>2.2.0</PackageVersion>
+	<AssemblyVersion>2.2.0</AssemblyVersion>
 	<InformationalVersion>2.1.2</InformationalVersion>
-	<Version>2.1.2</Version>	  
+	<Version>2.2.0</Version>	  
     <RepositoryUrl>https://github.com/code-dispenser/Flow</RepositoryUrl>	  
 	<PackageProjectUrl>https://github.com/code-dispenser/Flow</PackageProjectUrl>
 	<PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -28,7 +28,7 @@
 	<EmbedUntrackedSources>true</EmbedUntrackedSources>
 	<DebugType>embedded</DebugType>
 	<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
-	<PackageReleaseNotes>Added two additional Failure Types JsonFailure and GrpcFailure</PackageReleaseNotes>
+	<PackageReleaseNotes>Added new OnFailureTry extension methods, more OnSuccessTry overloads and another FlowHandler.TryToFlow overload.</PackageReleaseNotes>
 	  
   </PropertyGroup>
 
