Added BindFailure method to Flow class, couldn't just overload Bind as there was a potential for the wrong bind to be called.
Added more OnFailure extensions.

Moved Then extensions to their own paritlal file.

Bumped version to 3.1.0 ready for release.

--- a/Source/Flow.Core/Flow.Core.csproj
+++ b/Source/Flow.Core/Flow.Core.csproj
@@ -15,12 +15,12 @@
 	<GeneratePackageOnBuild>False</GeneratePackageOnBuild>    
 	<PackageReadmeFile>ReadMe.md</PackageReadmeFile>	
 	<PackageIcon>icon-64.png</PackageIcon>	  
-	<FileVersion>3.0.0</FileVersion>
+	<FileVersion>3.1.0</FileVersion>
 	<Copyright>Copyright (c) 2024 Paul Kent.</Copyright>
-	<PackageVersion>3.0.0</PackageVersion>
-	<AssemblyVersion>3.0.0</AssemblyVersion>
-	<InformationalVersion>3.0.0</InformationalVersion>
-	<Version>3.0.0</Version>	  
+	<PackageVersion>3.1.0</PackageVersion>
+	<AssemblyVersion>3.1.0</AssemblyVersion>
+	<InformationalVersion>3.1.0</InformationalVersion>
+	<Version>3.1.0</Version>	  
     <RepositoryUrl>https://github.com/code-dispenser/Flow</RepositoryUrl>	  
 	<PackageProjectUrl>https://github.com/code-dispenser/Flow</PackageProjectUrl>
 	<PublishRepositoryUrl>true</PublishRepositoryUrl>
@@ -28,9 +28,7 @@
 	<EmbedUntrackedSources>true</EmbedUntrackedSources>
 	<DebugType>embedded</DebugType>
 	<ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
-	<PackageReleaseNotes>Added new OnFailureTry extension methods, more OnSuccessTry / FlowHandler.TryToFlow overloads.
-
-OnSuccessTry/TryToFlow may lead to method resolution ambiguities when used in certain scenarios. If you encounter ambiguity issues in your code, you can resolve them by explicitly specifying the argument types to match the correct overload.</PackageReleaseNotes>
+	<PackageReleaseNotes>New BindFailure and OnFailure overloads</PackageReleaseNotes>
 	  
   </PropertyGroup>
 
